Sarath.sfp_Dev_Org/src/objects/Dynamic_Field_Generator__c.object
<CustomObject>
    <fields>
        <fullName>ACTIVITIES__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACTIVITIES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADDRESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ADDRESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CONTACT_NUMBER__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CONTACT NUMBER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMAIL_ADDRESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email ADDRESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OFFICE_SPACE_REQUIREMENT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OFFICE SPACE REQUIREMENT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROPOSED_COMPANY_NAME_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PROPOSED COMPANY NAME 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROPOSED_COMPANY_NAME_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PROPOSED COMPANY NAME 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROPOSED_COMPANY_NAME_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PROPOSED COMPANY NAME 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Contact Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_DOB_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner DOB Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_DOB_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner DOB Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_DOB_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner DOB Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_First_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner First Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Gender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Gender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Last_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Nationality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Nationality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Passport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Passport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rating Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TOTAL_EMPLOYEES_TO_HIRE_FULL_TIME__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TOTAL EMPLOYEES TO HIRE(FULL TIME)</label>
        <type>Checkbox</type>
    </fields>
    <label>Dynamic Field Generator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dynamic Field Generator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Field Generator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>